<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BomberDB</string>
    <string name="hello_world">Bienvenidos a BomberDB</string>
    <string name="title_activity_main">BomberDB</string>
    <string name="title_activity_list_vehiculo">Listar Vehiculos</string>
    <string name="title_activity_list_emergencia">Listar Emergencias</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_insert">Insertar</string>
    <string name="action_list">Consultar</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_update">Modificar</string>
    <string name="action_refresh">Refrescar</string>
    <string name="title_activity_insert">Insertar Usuarios</string>
    <string name="title_activity_update">Actualizar Usuario</string>
    <string name="title_activity_update_vehiculo">Actualizar Vehiculo</string>
    <string name="title_activity_update_emergencia">Actualizar Emergencia</string>
    <string name="action_settings">Preferencias</string>
    <string name="codigo">Codigo</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="success_insert">Se creo el nuevo registro</string>
    <string name="success_update">Se actualizó el registro</string>
    <string name="error_insert">Error creando el nuevo registro</string>
    <string name="error_update">Error actualizando el registro</string>
    <string name="delete_message">Se elimino el usuario </string>
    <string name="delete_message_vehiculo">Se elimino el Vehiculo </string>
    <string name="delete_message_emergencia">Se elimino la emergencia </string>
    <string name="delete_error">Se encontró un error eliminando el usuario </string>
    <string name="delete_error_vehiculo">Se encontró un error eliminando el Vehiculo </string>
    <string name="delete_error_emergencia">Se encontró un error eliminando la emergencia </string>
    <string name="opciones">Opciones</string>
    <string name="clase_veh">Clase</string>
    <string name="placa_veh">Placa</string>
    <string name="modelo_veh">Modelo</string>
    <string name="propietario_veh">Propietario</string>
    <string name="soat_veh">SOAT</string>
    <string name="servicio_veh">Servicio</string>
    <string name="marca_veh">Marca</string>
    <string name="empresa_veh">Empresa</string>
    <string name="conductor_veh">Conductor</string>
    <string name="compania_seguro__veh">Compañia de Seguro</string>
    <string name="title_activity_insert_vehiculo">Insertar Vehiculos</string>
    <string name="listarvehiculos">Listar Vehiculos</string>
    <string name="subirVehicilos">Subir Vehiculos</string>
    <string name="subirEmergencias">Subir Emergencias</string>
    <string name="eme_fecha">Fecha Emergencia</string>
    <string name="eme_hora">Hora de Registro Emergencia</string>
    <string name="eme_informante">Informante de la emergencia</string>
    <string name="eme_informacionr">Informacion recibida</string>
    <string name="eme_medio_informacion">Medio de Informacion</string>
    <string name="eme_descripcion_medio">Descripcion otro medio de informacion</string>
    <string name="eme_persona_confirmacion">Persona que confirma la emergencia</string>
    <string name="eme_medio_confirmacion">Medio de Confirmacion</string>
    <string name="eme_descripcion_confirmacion">Descripcion otro medio confirmacion</string>
    <string name="eme_direccion">Direccion de la emergencia</string>
    <string name="eme_inmueble_clase">Clase de Inmueble</string>
    <string name="eme_inmueble_propietario">Propietario del Inmueble</string>
    <string name="eme_inmueble_administrador">Administrador del Inmueble</string>
    <string name="eme_inmueble_arrendatario">Arrendatario del Inmueble</string>
    <string name="eme_novedades">Novedades u observaciones</string>
    <string name="eme_comandante">Comandante de Incidente</string>
    <string name="eme_tipoe">Tipo de Emergencia</string>
    <string name="title_activity_actualiza_vehiculo">Actualizar Vehiculos</string>
    <string name="title_activity_actualiza_emergencia">Actualizar Emergencias</string>
</resources>
