<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/clase_veh"
            android:id="@+id/label1"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/campoClase"
            android:layout_weight="0.5" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/placa_veh"
            android:id="@+id/label2"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/campoPlaca"
            android:layout_weight="0.5" />
    </LinearLayout>
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:weightSum="1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/modelo_veh"
        android:id="@+id/label3"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:singleLine="false"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/campoModelo"
        android:layout_weight="0.5" />
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/propietario_veh"
            android:id="@+id/label4"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/campoPropietario"
            android:layout_weight="0.5" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/soat_veh"
            android:id="@+id/label5"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/campoSoat"
            android:layout_weight="0.5" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/servicio_veh"
            android:id="@+id/label6"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/campoServicio"
            android:layout_weight="0.7" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/marca_veh"
            android:id="@+id/label7"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/campoMarca"
            android:layout_weight="0.7" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/empresa_veh"
            android:id="@+id/label8"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/campoEmpresa"
            android:layout_weight="0.7" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/conductor_veh"
            android:id="@+id/label9"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/campoConductor"
            android:layout_weight="0.7" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/compania_seguro__veh"
            android:id="@+id/label10"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:singleLine="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/campoCompaniaSeguro"
            android:layout_weight="0.7" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_insert"
            android:id="@+id/buttonInsertVehiculo" />

    </LinearLayout>
</LinearLayout>
    </ScrollView>