<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_fecha"
                android:id="@+id/labelFecha"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/campofecha"
                android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_hora"
                android:id="@+id/labelHora"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:id="@+id/campoHora"
                android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_informante"
                android:id="@+id/labelInformante"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/campoInformante"
                android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_informacionr"
                android:id="@+id/labelInformacionr"
                android:layout_weight="0.1"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/campoInformacionr"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_medio_informacion"
                android:id="@+id/labelMedio_informacion"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/medioInformacion">
                <RadioButton
                    android:id="@+id/OpcionPersona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Personalmente"/>
                <RadioButton
                    android:id="@+id/OpcionTelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teléfono"/>
                <RadioButton
                    android:id="@+id/OpcionOtros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Otros"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_descripcion_medio"
                android:id="@+id/labelOtro_medio"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/campoOtro_medio"
                android:layout_weight="0.5"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_persona_confirmacion"
                android:id="@+id/labelPersona_confirmacion"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/campoPersona_confirmacion"
                android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_medio_confirmacion"
                android:id="@+id/labelMedio_confirmacion"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/medioConfirmacion">
                <RadioButton
                    android:id="@+id/OpcionPersonac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Personalmente"/>
                <RadioButton
                    android:id="@+id/OpcionTelefonoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teléfono"/>
                <RadioButton
                    android:id="@+id/OpcionOtrosc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Otros"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_descripcion_confirmacion"
                android:id="@+id/labelMedio_Confirmacion"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/campoMedio_confirmacion"
                android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_direccion"
                android:id="@+id/labelDireccion"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/campoDireccion"
                android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_inmueble_clase"
                android:id="@+id/labelCampoClase_inmueble"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/claseInmueble">
                <RadioButton
                    android:id="@+id/OpcionResidencial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Residencial"/>
                <RadioButton
                    android:id="@+id/OpcionComercial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Comercial"/>
                <RadioButton
                    android:id="@+id/OpcionIndustrial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Industrial"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_inmueble_propietario"
                android:id="@+id/labelCampoInmueble_propietario"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/campoPropietario_inmmueble"
                android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_inmueble_administrador"
                android:id="@+id/labelInmueble_administrador"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/campoInmueble_administrador"
                android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_inmueble_arrendatario"
                android:id="@+id/labelInmueble_arrendatario"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/campoInmueble_arrendatario"
                android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_novedades"
                android:id="@+id/labelNovedades"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/campoNovedades"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/eme_comandante"
                android:id="@+id/labelComandante"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/campoComandante"
                android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1" >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_insert"
                android:id="@+id/buttonInsertEmergencia" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>